Remove duplicate slide, correct link
There was a redirect anyway

--- a/slide/presentazione.tex
+++ b/slide/presentazione.tex
@@ -55,18 +55,6 @@
 		\end{itemize}
 	\end{frame}
 
-	\begin{frame}
-		\frametitle{Cos'è il profiling}
-		Tecnica di \textbf{analisi} del software finalizzata all'\textbf{ottimizzazione}.
-		
-		Può riguardare:
-		\begin{itemize}
-			\item Tempo impiegato (da ogni funzione, blocco di codice, etc...)
-			\item Istruzioni eseguite (da ogni funzione, blocco di codice, etc...)
-			\item Memoria occupata
-		\end{itemize}
-	\end{frame}
-
 \begin{frame}
 	\frametitle{Perché si fa}
 	\textbf{Ottimizzazione}: meno istruzioni eseguite, meno tempo impiegato, meno memoria occupata, etc...
@@ -140,7 +128,7 @@
 		{\centering\large Domande?\par}
 		
 		\vspace{5em}
-		Codice sorgente: \href{https://github.com/lvps/talk-profiler}{github.com/lvps/talk-profiler-linuxday-2020}
+		Codice sorgente: \href{https://github.com/lvps/talk-profiler-linuxday-2020}{github.com/lvps/talk-profiler-linuxday-2020}
 	\end{frame}
 	
 \end{document}
